--- a/read-pwr-ina219/Makefile
+++ b/read-pwr-ina219/Makefile
@@ -5,7 +5,7 @@ MICROCC=$(MICROCCPATH)/microblazeel-xilinx-linux-gnu-g++
 CFLAGS=-Wall
 MICROCFLAGS=-mcpu=v8.40.b -mxl-barrel-shift -mxl-multiply-high -mxl-pattern-compare -mno-xl-soft-mul -mno-xl-soft-div -mxl-float-sqrt -mhard-float -mxl-float-convert -mlittle-endian -Wall
 DEBUGFLAGS=-ggdb -g -gdwarf-2 -g3 #gdwarf-2 + g3 provides macro info to gdb
-INCPATH=-I./include/ -I/home/ty/XiphosDevEnv/petalinux-v12.12-mbel/lib/gcc/microblazeel-xilinx-linux-gnu/4.6.2/plugin/include/
+INCPATH=-I./include/ -I/home/ty/XiphosDevEnv/petalinux-v12.12-mbel/microblazeel-xilinx-linux-gnu/sys-root/usr/include/
 INCTESTPATH=-I./tests/unit/stubs/ -I./tests/helpers/include/
 LIBPATH=-L./lib/
 #LIBS=-lCppUTest -lCppUTestExt
@@ -14,10 +14,8 @@ LIBPATH=-L./lib/
 
 buildBin:
 	$(CC) $(CFLAGS) $(INCPATH) $(LIBPATH) src/*.cpp -lshakespeare -o bin/read-pwr-ina219-x86
-#        $(CC) $(CFLAGS) $(INCPATH) $(LIBPATH) $(DEBUGFLAGS) -DPC src/*.cpp -o bin/space-commander-x86
 
 buildQ6:
-	#$(MICROCC) $(MICROCFLAGS) $(INCPATH) $(LIBPATH) src/*.cpp -o bin/read-pwr-ina219 
 	$(MICROCC) $(MICROCFLAGS) $(INCPATH) $(LIBPATH) src/*.cpp -lshakespeare-mbcc -o bin/read-pwr-ina219 
 
 #buildAllTests: buildUnitTests
