Fixed files that should not be tracked and updated gitignore

--- a/enable-AHRM/Makefile
+++ b/enable-AHRM/Makefile
@@ -1,7 +1,5 @@
 CC=g++
-#MICROCC=microblazeel-xilinx-linux-gnu-g++
-MICROCCPATH=/home/ty/XiphosDevEnv/petalinux-v12.12-mbel/bin
-MICROCC=$(MICROCCPATH)/microblazeel-xilinx-linux-gnu-g++
+MICROCC=microblazeel-xilinx-linux-gnu-g++
 CFLAGS=-Wall
 MICROCFLAGS=-mcpu=v8.40.b -mxl-barrel-shift -mxl-multiply-high -mxl-pattern-compare -mno-xl-soft-mul -mno-xl-soft-div -mxl-float-sqrt -mhard-float -mxl-float-convert -mlittle-endian -Wall
 DEBUGFLAGS=-ggdb -g -gdwarf-2 -g3 #gdwarf-2 + g3 provides macro info to gdb
