--- a/read-pwr-ina219/Makefile
+++ b/read-pwr-ina219/Makefile
@@ -5,7 +5,7 @@ MICROCCPATH=/home/ty/XiphosDevEnv/petalinux-v12.12-mbel/bin
 CFLAGS=-Wall
 MICROCFLAGS=-mcpu=v8.40.b -mxl-barrel-shift -mxl-multiply-high -mxl-pattern-compare -mno-xl-soft-mul -mno-xl-soft-div -mxl-float-sqrt -mhard-float -mxl-float-convert -mlittle-endian -Wall
 DEBUGFLAGS=-ggdb -g -gdwarf-2 -g3 #gdwarf-2 + g3 provides macro info to gdb
-INCPATH=-I./include/ -I/home/ty/XiphosDevEnv/petalinux-v12.12-mbel/microblazeel-xilinx-linux-gnu/sys-root/usr/include/
+INCPATH=-I./include/ #-I/home/ty/XiphosDevEnv/petalinux-v12.12-mbel/microblazeel-xilinx-linux-gnu/sys-root/usr/include/
 INCTESTPATH=-I./tests/unit/stubs/ -I./tests/helpers/include/
 LIBPATH=-L./lib/
 #LIBS=-lCppUTest -lCppUTestExt
