modify read-acs-mag, SolarPanelTemperature_Sensor, ElecbaynPayload. I modified to the specification that Shawn B has made, to the extent without the Q6. It compiles, but I have not tested it, I was suppose to make dummy devices, but did not come to it. Have not perform gtest, I will do it after this push. I have also shorten the decription names to take less space

--- a/job-template/Makefile
+++ b/job-template/Makefile
@@ -1,4 +1,4 @@
-JOBNAME=job_template
+JOBNAME=job-template
 CC=g++
 MICROCC=microblazeel-xilinx-linux-gnu-g++
 MICROCCPATH=/home/ty/XiphosDevEnv/petalinux-v12.12-mbel/bin
