Rename folders to match the other jobs, eg. read-****-**** to follow naming convention propose by software lead Shawn and all files are ready to be tested for Q6

--- a/read-temp-spts/Makefile
+++ b/read-temp-spts/Makefile
@@ -12,13 +12,10 @@ LIBPATH=-L./lib/ -L../../space-lib/shakespeare/lib/
 #DEBUG_SRC_FILES =`find src/ ! -name 'main.cpp' -name '*.cpp'`
 
 buildBin:
-	$(CC) $(CFLAGS) $(INCPATH) $(LIBPATH) src/*.cpp -lshakespeare -o bin/read-acs-mag-x86
+	$(CC) $(CFLAGS) $(INCPATH) $(LIBPATH) src/*.cpp -lshakespeare -o bin/read-solar-temp-x86
 
 buildQ6:
-	$(MICROPP) $(MICROCFLAGS) $(INCPATH) $(LIBPATH) src/*.cpp -lshakespeare-mbcc -o bin/read-acs-mag
-
-clean:
-	rm -f bin/* lib/* 
+	$(MICROPP) $(MICROCFLAGS) $(INCPATH) $(LIBPATH) src/*.cpp -lshakespeare-mbcc -o bin/read-solar-tem
 
 #buildAllTests: buildUnitTests
 #buildUnitTests:
