Fixed issue that logging syntax change introduced, provisionally fixed the memory leak issue, began CPPUTest integration to check for memory leakage

--- a/job-runner/Makefile
+++ b/job-runner/Makefile
@@ -8,6 +8,13 @@ BEAGLECC=arm-linux-gnueabi-g++
 MICROCFLAGS=-mcpu=v8.40.b -mxl-barrel-shift -mxl-multiply-high -mxl-pattern-compare -mno-xl-soft-mul -mno-xl-soft-div -mxl-float-sqrt -mhard-float -mxl-float-convert -mlittle-endian -Wall
 DEBUGFLAGS=-ggdb -g -gdwarf-2 -g3 #gdwarf-2 + g3 provides macro info to gdb
 
+CS1_PATH = ../../
+
+CPPUTEST_HOME = $(CS1_PATH)/CppUTest
+CPPFLAGS += -Wall -I$(CPPUTEST_HOME)/include
+MEM_LEAK_MACRO = -include $(CPPUTEST_HOME)/include/CppUTest/MemoryLeakDetectorMallocMacros.h  -include $(CPPUTEST_HOME)/include/CppUTest/MemoryLeakDetectorNewMacros.h
+CPPUTEST_INCLUDES = -I$(CPPUTEST_HOME)/include/ -I$(SPACELIB_PATH)/include/
+
 TIMER_PATH=../../space-timer-lib
 SPACELIB_PATH=../../space-lib
 SHAKESPEARE_PATH=$(SPACELIB_PATH)/shakespeare
@@ -27,7 +34,11 @@ buildQ6: makedir
 	$(MICROPP) $(CXX_FLAGS) $(MICROCFLAGS) $(INCPATH) $(MICROINCPATH) $(LIBPATH) $(DEBUGFLAGS) src/jobrunner.cpp $(Q6LIBS) -o bin/job-runner-mbcc
 
 buildBB:
-	$(BEAGLECC) $(CXX_FLAGS) $(INCPATH) $(BBINCPATH) $(LIBPATH) $(DEBUGFLAGS) -static -c src/src/jobrunner.cpp -ltimer-BB -lshakespeare-BB
+	$(BEAGLECC) $(CXX_FLAGS) $(INCPATH) $(BBINCPATH) $(LIBPATH) $(DEBUGFLAGS) -static -c src/jobrunner.cpp -ltimer-BB -lshakespeare-BB
+
+UNIT_TEST = tests/unit/job-runner-test.cpp
+bin/AllTests: tests/unit/AllTests.cpp $(UNIT_TEST) $(OBJECTS) 
+	$(CXX) $(CFLAGS) $(CPPFLAGS) $(CXXFLAGS) $(DEBUGFLAGS) $(CPPUTEST_INCLUDES) $(LIBPATH) -o $@ $^ $(LIBS) $(ENV)
 
 makedir:
 	mkdir -p bin
