--- a/jobs/read-acs-mag/gtest/Makefile
+++ b/jobs/read-acs-mag/gtest/Makefile
@@ -12,11 +12,9 @@
 # project, except GTEST_HEADERS, which you can use in your own targets
 # but shouldn't modify.
 
-# Points to the root of Google Test, relative to where this file is.
-# Remember to tweak this if you move this file.
-GTEST_DIR = ../../../gtest-1.7.0
-
 # Where to find user code.
+PROJECT_DIR = ../../../..
+UTILS_DIR = ../../space-lib/utls/
 USER_DIR = ../
 SHAKES_DIR = ../../../space-lib/shakespeare
 GLOBAL_INC_DIR = ../../../space-lib/include/
@@ -29,6 +27,10 @@ CPPFLAGS += -isystem $(GTEST_DIR)/include
 
 # Flags passed to the C++ compiler.
 CXXFLAGS += -g -Wall -Wextra -pthread
+
+# Points to the root of Google Test, relative to where this file is.
+# Remember to tweak this if you move this file.
+GTEST_DIR = $(PROJECT_DIR)/gtest-1.7.0
 
 # All tests produced by this Makefile.  Remember to add new tests you
 # created to the list.
@@ -76,7 +78,7 @@ read-acs-mag.o : $(USER_DIR)/src/read-acs-mag.cpp $(SHAKES_DIR)/inc/shakespeare.
 	$(CXX) $(CPPFLAGS) $(INCPATH) $(CXXFLAGS) -c $(USER_DIR)/src/read-acs-mag.cpp
 
 shakespeare.o : $(SHAKES_DIR)/src/shakespeare.cpp $(SHAKES_DIR)/inc/shakespeare.h $(GTEST_HEADERS)
-	$(CXX) $(CPPFLAGS) $(INCPATH) $(CXXFLAGS) -c $(SHAKES_DIR)/src/shakespeare.cpp 
+	$(CXX) $(CPPFLAGS) $(INCPATH) $(CXXFLAGS) -c $(SHAKES_DIR)/src/shakespeare.cpp
 
 read-acs-mag_test : read-acs-mag.o shakespeare.o gtest_main.a
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -lpthread $^ -o $@ -lrt
